@@ -2,6 +2,8 @@ Release 1.1-SNAPSHOT
 * Added \diff command to compare results from SQL executed across 
   multiple session.
 * Tab completion now recognizes the TSQL "use" statement.
+* Display of "info" type SQLWarning's (e.g. the output from a "print"
+  statement from Sybase and Microsoft) is improved.
 * Fixed bug with way getUpdateCount() is being called that was causing
   Sybase's jConnect driver to complain.
 * Updated driver definition to use the jConnect 6.x driver for Sybase
